--- a/etl_pipeline.ipynb
+++ b/etl_pipeline.ipynb
@@ -313,6 +313,482 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Cleaning and Transformation\n",
+    "# Remove Duplicates\n",
+    "\n",
+    "data.drop_duplicates(inplace = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handle missing numeric values by filling with the mean or median\n",
+    "\n",
+    "numeric_columns = data.select_dtypes(include = ['float64', 'int64']).columns\n",
+    "for col in numeric_columns:\n",
+    "    data.fillna({col : data[col].mean()}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handle missing string values by filling with 'Unknown'ArithmeticError\n",
+    "\n",
+    "string_columns = data.select_dtypes(include = ['object']).columns\n",
+    "for col in string_columns:\n",
+    "    data.fillna({col : 'Unknown'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Date'] = pd.to_datetime(data['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1000 entries, 0 to 999\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                  Non-Null Count  Dtype         \n",
+      "---  ------                  --------------  -----         \n",
+      " 0   Date                    1000 non-null   datetime64[ns]\n",
+      " 1   ProductName             1000 non-null   object        \n",
+      " 2   Quantity                1000 non-null   int64         \n",
+      " 3   UnitPrice               1000 non-null   float64       \n",
+      " 4   StoreLocation           1000 non-null   object        \n",
+      " 5   PaymentType             1000 non-null   object        \n",
+      " 6   PromotionApplied        1000 non-null   bool          \n",
+      " 7   Weather                 1000 non-null   object        \n",
+      " 8   Temperature             1000 non-null   float64       \n",
+      " 9   StaffPerformanceRating  1000 non-null   object        \n",
+      " 10  CustomerFeedback        1000 non-null   object        \n",
+      " 11  DeliveryTime_min        1000 non-null   int64         \n",
+      " 12  OrderType               1000 non-null   object        \n",
+      " 13  CustomerName            1000 non-null   object        \n",
+      " 14  CustomerAddress         1000 non-null   object        \n",
+      " 15  Customer_PhoneNumber    1000 non-null   object        \n",
+      " 16  CustomerEmail           1000 non-null   object        \n",
+      " 17  Staff_Name              1000 non-null   object        \n",
+      " 18  Staff_Email             1000 non-null   object        \n",
+      " 19  DayOfWeek               1000 non-null   object        \n",
+      " 20  TotalSales              1000 non-null   float64       \n",
+      "dtypes: bool(1), datetime64[ns](1), float64(3), int64(2), object(14)\n",
+      "memory usage: 165.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the product table\n",
+    "\n",
+    "products = data[['ProductName']].copy().drop_duplicates().reset_index(drop = True)\n",
+    "products.index.name = 'ProductID'\n",
+    "\n",
+    "products = products.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9, 2)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 5)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the customer table\n",
+    "\n",
+    "customers = data[['CustomerName', 'CustomerAddress', 'Customer_PhoneNumber', 'CustomerEmail']].copy().drop_duplicates().reset_index(drop = True)\n",
+    "customers.index.name = 'CustomerID'\n",
+    "\n",
+    "customers = customers.reset_index()\n",
+    "customers.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 4)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the staff table\n",
+    "\n",
+    "staff = data[['Staff_Name', 'Staff_Email', 'StaffPerformanceRating']].copy().drop_duplicates().reset_index(drop = True)\n",
+    "staff.index.name = 'StaffID'\n",
+    "\n",
+    "staff = staff.reset_index()\n",
+    "staff.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'ProductName', 'Quantity', 'UnitPrice', 'StoreLocation',\n",
+       "       'PaymentType', 'PromotionApplied', 'Weather', 'Temperature',\n",
+       "       'StaffPerformanceRating', 'CustomerFeedback', 'DeliveryTime_min',\n",
+       "       'OrderType', 'CustomerName', 'CustomerAddress', 'Customer_PhoneNumber',\n",
+       "       'CustomerEmail', 'Staff_Name', 'Staff_Email', 'DayOfWeek', 'TotalSales',\n",
+       "       'ProductID', 'CustomerID', 'StaffID'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create Transactions table\n",
+    "\n",
+    "transactions = data.merge(products, on = ['ProductName'], how = 'left')\\\n",
+    "    .merge(customers, on = ['CustomerName', 'CustomerAddress', 'Customer_PhoneNumber', 'CustomerEmail'], how = 'left')\\\n",
+    "        .merge(staff, on = ['Staff_Name', 'Staff_Email', 'StaffPerformanceRating'], how = 'left')\n",
+    "\n",
+    "transactions.columns\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Transaction_ID</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>ProductID</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>StoreLocation</th>\n",
+       "      <th>PaymentType</th>\n",
+       "      <th>PromotionApplied</th>\n",
+       "      <th>Weather</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>CustomerFeedback</th>\n",
+       "      <th>DeliveryTime_min</th>\n",
+       "      <th>OrderType</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>StaffID</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>TotalSales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12.532304</td>\n",
+       "      <td>2</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Rainy</td>\n",
+       "      <td>20.654914</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>30</td>\n",
+       "      <td>In Store</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>25.064608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01 01:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.083070</td>\n",
+       "      <td>1</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Rainy</td>\n",
+       "      <td>23.549497</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>33</td>\n",
+       "      <td>In Store</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>7.083070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 02:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.736064</td>\n",
+       "      <td>5</td>\n",
+       "      <td>North</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Rainy</td>\n",
+       "      <td>27.154342</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Phone Order</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>33.680321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-01-01 03:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.314823</td>\n",
+       "      <td>2</td>\n",
+       "      <td>North</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>20.137483</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Online Order</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>14.629647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-01-01 04:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.577727</td>\n",
+       "      <td>1</td>\n",
+       "      <td>East</td>\n",
+       "      <td>Credit Card</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>23.020987</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>58</td>\n",
+       "      <td>In Store</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>7.577727</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Transaction_ID                 Date  ProductID  UnitPrice  Quantity  \\\n",
+       "0               0  2023-01-01 00:00:00          0  12.532304         2   \n",
+       "1               1  2023-01-01 01:00:00          1   7.083070         1   \n",
+       "2               2  2023-01-01 02:00:00          2   6.736064         5   \n",
+       "3               3  2023-01-01 03:00:00          3   7.314823         2   \n",
+       "4               4  2023-01-01 04:00:00          4   7.577727         1   \n",
+       "\n",
+       "  StoreLocation  PaymentType  PromotionApplied Weather  Temperature  \\\n",
+       "0         South         Cash              True   Rainy    20.654914   \n",
+       "1         South         Cash             False   Rainy    23.549497   \n",
+       "2         North         Cash              True   Rainy    27.154342   \n",
+       "3         North         Cash             False  Cloudy    20.137483   \n",
+       "4          East  Credit Card              True  Cloudy    23.020987   \n",
+       "\n",
+       "  CustomerFeedback  DeliveryTime_min     OrderType  CustomerID  StaffID  \\\n",
+       "0          Neutral                30      In Store           0        0   \n",
+       "1         Positive                33      In Store           1        1   \n",
+       "2          Unknown                43   Phone Order           2        2   \n",
+       "3         Positive                32  Online Order           3        3   \n",
+       "4          Neutral                58      In Store           4        4   \n",
+       "\n",
+       "  DayOfWeek  TotalSales  \n",
+       "0    Sunday   25.064608  \n",
+       "1    Sunday    7.083070  \n",
+       "2    Sunday   33.680321  \n",
+       "3    Sunday   14.629647  \n",
+       "4    Sunday    7.577727  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions = transactions[['Date', 'ProductID', 'UnitPrice', 'Quantity', 'StoreLocation',\n",
+    "       'PaymentType', 'PromotionApplied', 'Weather', 'Temperature', 'CustomerFeedback', 'DeliveryTime_min',\n",
+    "       'OrderType', 'CustomerID', 'StaffID', 'DayOfWeek', 'TotalSales']]\n",
+    "\n",
+    "transactions.index.name = 'Transaction_ID'\n",
+    "transactions = transactions.reset_index()\n",
+    "\n",
+    "transactions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert transaction date column to datetime \n",
+    "\n",
+    "transactions['Date'] = pd.to_datetime(transactions['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column            Non-Null Count  Dtype         \n",
+      "---  ------            --------------  -----         \n",
+      " 0   Transaction_ID    1000 non-null   int64         \n",
+      " 1   Date              1000 non-null   datetime64[ns]\n",
+      " 2   ProductID         1000 non-null   int64         \n",
+      " 3   UnitPrice         1000 non-null   float64       \n",
+      " 4   Quantity          1000 non-null   int64         \n",
+      " 5   StoreLocation     1000 non-null   object        \n",
+      " 6   PaymentType       1000 non-null   object        \n",
+      " 7   PromotionApplied  1000 non-null   bool          \n",
+      " 8   Weather           1000 non-null   object        \n",
+      " 9   Temperature       1000 non-null   float64       \n",
+      " 10  CustomerFeedback  1000 non-null   object        \n",
+      " 11  DeliveryTime_min  1000 non-null   int64         \n",
+      " 12  OrderType         1000 non-null   object        \n",
+      " 13  CustomerID        1000 non-null   int64         \n",
+      " 14  StaffID           1000 non-null   int64         \n",
+      " 15  DayOfWeek         1000 non-null   object        \n",
+      " 16  TotalSales        1000 non-null   float64       \n",
+      "dtypes: bool(1), datetime64[ns](1), float64(3), int64(6), object(6)\n",
+      "memory usage: 126.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "transactions.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save cleaned data as csv files\n",
+    "\n",
+    "data.to_csv('clean_data.csv', index = False)\n",
+    "products.to_csv('products.csv', index = False)\n",
+    "customers.to_csv('customers.csv', index = False)\n",
+    "staff.to_csv('staff.csv', index = False)\n",
+    "transactions.to_csv('transactions.csv', index = False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
