--- a/etl_pipeline.ipynb
+++ b/etl_pipeline.ipynb
@@ -789,6 +789,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Loading\n",
+    "# Load environment variables from the .env files\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "connection_str = os.getenv('AZURE_CONNECTION_STRING_VALUE')\n",
+    "container_name = os.getenv('CONTAINER_NAME')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rawdata/cleaned_zipco_transaction_data.csv loaded into Azure Blob Storage\n",
+      "cleaneddata/productscsv loaded into Azure Blob Storage\n",
+      "cleaneddata/customers.csv loaded into Azure Blob Storage\n",
+      "cleaneddata/staff.csv loaded into Azure Blob Storage\n",
+      "cleaneddata/transactions.csv loaded into Azure Blob Storage\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a BlobServiceClient object\n",
+    "blob_service_object = BlobServiceClient.from_connection_string(connection_str)\n",
+    "container_client = blob_service_object.get_container_client(container_name)\n",
+    "\n",
+    "#Load data to Azure Blob Storage\n",
+    "files = [\n",
+    "    (data, 'rawdata/cleaned_zipco_transaction_data.csv'),\n",
+    "    (products, 'cleaneddata/productscsv'),\n",
+    "    (customers, 'cleaneddata/customers.csv'),\n",
+    "    (staff, 'cleaneddata/staff.csv'),\n",
+    "    (transactions, 'cleaneddata/transactions.csv')\n",
+    "\n",
+    "]\n",
+    "\n",
+    "for file, blob_name in files:\n",
+    "    blob_client = container_client.get_blob_client(blob_name)\n",
+    "    output = file.to_csv(index = False)\n",
+    "    blob_client.upload_blob(output, overwrite = True)\n",
+    "    print(f'{blob_name} loaded into Azure Blob Storage')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
