Data Loading and DAG Script Completed

--- a/etl_pipeline.ipynb
+++ b/etl_pipeline.ipynb
@@ -338,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Handle missing string values by filling with 'Unknown'ArithmeticError\n",
+    "# Handle missing string values by filling with 'Unknown'\n",
     "\n",
     "string_columns = data.select_dtypes(include = ['object']).columns\n",
     "for col in string_columns:\n",
